# To-Do

./: .env  Cargo.toml  rocket.toml
migrations/2021-03-17-041056_create_todo/: up.sql
src/: main.rs  routes.rs
src/controller/: todo.rs
src/models/: todo.rs
