[package]
name = "todo"
version = "0.1.0"
authors = ["shanii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.44"
diesel = { version = "1.4", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "diesel_postgres_pool"]
